# myrt

./: CMakeLists.txt  README.me
cmake/: compile_flags.cmake
src/: geometry.hpp  image.cpp  image.hpp  myrt.cpp  random.cpp  random.hpp  shapes.hpp
